...
        
        registerButton.tintColor = .white
        registerButton.layer.cornerRadius = 8
        registerButton.backgroundColor = .systemBlue
        registerButton.setTitleColor(.white, for: .normal)
        registerButton.setAttributedTitle(attributes, for: .normal)
        registerButton.accessibilityIdentifier = "registerButtonIdentifier"
        registerButton.addTarget(self, action: #selector(registerButtonTapped), for: .touchUpInside)
    }
    
    /// Configure Already have account label view
    private func configureAlreadHasAccountLabel() {
        let text = NSMutableAttributedString(string: Register.alreadyHaveAccount)
...
