...
    }
    
    /// Configure `TableView`
    private func setUpTableView() {
        tableView.dataSource = self
        tableView.tableFooterView = UIView()
        tableView.accessibilityIdentifier = "newsListTableViewIdentifier"
        tableView.register(UINib(nibName: "NewsListTableViewCell", bundle: .main), forCellReuseIdentifier: "NewsListTableViewCell")
    }
    
    /// Configure `Loading Spinner`
    private func confifureLoadingSpinner(isLoading: Bool = true) {
        if isLoading {
...
